# Space-fighter-jet

./: CMakeLists.txt  README.md  main.cpp  resources.rc
src/: game.cpp  game.h  main.cpp  object.h  scene.cpp  scene.h  sceneend.cpp  sceneend.h  scenemain.cpp  scenemain.h  scenetitle.cpp  scenetitle.h
